ref: removed declared_at field from declare funds endpoint
